--- a/src/main/resources/templates/singlePizza.html
+++ b/src/main/resources/templates/singlePizza.html
@@ -1,25 +1,27 @@
 <head th:insert ="frags/head :: head"/>
 <body >
-   <div class="singleCard">
-	   <h1 class="text-center"> La mia Pizza</h1>
-	   <div class="card" style="max-width: 540px; background-color: darkblue; color: aliceblue;">
-         <div class="row g-0 p-0">
-            <div class="col-md-5">
-                <img th:src ="${singlePizza.foto}" class="img-fluid rounded-center" alt="...">
-            </div>
-            <div class="col-md-7 mb-4 mt-1">
-                <div class="card-body">
-                   <h5 class="card-title" th:text ="${'Nome: '+ singlePizza.name}"></h5>
-                   <p class="card-text" th:text ="${'INGREDIENTI: ' + singlePizza.description}"></p>
-                   <p class="card-text" th:text ="${ 'PREZZO: ' + singlePizza.price +' ' + 'euro'}"></p>
+  <header th:insert="header :: header"/>
+   <main>
+      <div class="singleCard">
+	      <h1 class="text-center"> La mia Pizza</h1>
+	      <div class="card" style="max-width: 540px; background-color: darkblue; color: aliceblue;">
+              <div class="row g-0 p-0">
+                 <div class="col-md-5">
+                    <img th:src ="${singlePizza.foto}" class="img-fluid rounded-center" alt="...">
                  </div>
-             </div>
-            </div>
-        </div>
-	
-    </div>
+                 <div class="col-md-7 mb-4 mt-1">
+                    <div class="card-body">
+                       <h5 class="card-title" th:text ="${'Nome: '+ singlePizza.name}"></h5>
+                       <p class="card-text" th:text ="${'INGREDIENTI: ' + singlePizza.description}"></p>
+                       <p class="card-text" th:text ="${ 'PREZZO: ' + singlePizza.price +' ' + 'euro'}"></p>
+                    </div>
+                  </div>
+                </div>
+           </div>
+       </div>
+   </main>
 
-    <!-- Bootstrap Bundle with Popper -->
-         <script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.bundle.min.js}"></script>
+ <!-- Bootstrap Bundle with Popper -->
+     <script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.bundle.min.js}"></script>
 </body>
 </html>
