Added title of my application

--- a/src/main/resources/templates/frags/head.html
+++ b/src/main/resources/templates/frags/head.html
@@ -9,5 +9,5 @@
 
 <!-- CSS -->
 <link rel="stylesheet" th:href="@{/css/styles.css}">
-<title>Insert title here</title>
+<title>Pizzeria-crud</title>
 </head>
