Added search method that allows user to search pizza by name

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,7 +5,7 @@
 </head>
 <body>
    <header th:fragment="header()">
-	<nav class="navbar navbar-expand-lg bg-body-tertiary" style="color: red;">
+	<nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
          <img th:src="@{/img/Pizza-logo.png}" alt="logo" style="width: 100px;">
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,7 +13,17 @@
          </button>
          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-               <button class="nav-link active" aria-current="page" th:insert = "fragment ::button('/pizze', 'Home')">Home</button>
+               <a  aria-current="page" 
+                  th:insert = "fragment ::button('/', 'Home')"
+                  style="--bs-btn-padding-y: .5rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 1rem;">
+                  Home
+               </a>
+               <div class="mx-4 m-auto">
+				   <form class="d-flex" role="search">
+                      <input class="form-control me-2" type="text" name="query" th:value="${query}" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit" >Search</button>
+                   </form>
+			   </div>
             </div>
          </div>
        </div>
