--- a/src/main/resources/templates/pizze.html
+++ b/src/main/resources/templates/pizze.html
@@ -4,13 +4,13 @@
  <main>
 	 <div class="container ">
 	  <h1 class="text-center"> Le mie Pizze</h1>
-	  <div class="card" style="width: 540px;height: 583px; background-color: darkblue; color: aliceblue;">
-         <div class="row g-1 p-0" th:each = "pizza : ${pizze}">
+	  <div class="card" style="width: auto;height: auto; background-color: rgb(0, 41, 77); color: aliceblue;">
+         <div class="row g-1 p-1" th:each = "pizza : ${pizze}">
             <div class="col-md-4">
                 <img th:src="${pizza.foto}" class="img-fluid rounded-start" alt="...">
             </div>
-            <div class="col-md-8 mb-4 mt-1">
-                <div class="card-body">
+            <div class="col-md-8 m-auto">
+                <div class="card-body ">
                    <h5 class="card-title">
 					  <a th:href="@{/pizze/{id}(id=${pizza.id})}" th:text="${pizza.name}">
 				         [[${pizza.name}]]			
