--- a/src/main/resources/templates/pizze.html
+++ b/src/main/resources/templates/pizze.html
@@ -10,20 +10,32 @@
                 <img th:src="${pizza.foto}" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8 m-auto">
-                <div class="card-body ">
-                   <h5 class="card-title">
-					  <a th:href="@{/pizze/{id}(id=${pizza.id})}" th:text="${pizza.name}">
+                <div class="card-body d-flex">
+					
+                   <div>
+					   <h5 class="card-title">
+					   <a th:href="@{/pizze/{id}(id=${pizza.id})}" th:text="${pizza.name}">
 				         [[${pizza.name}]]			
-			          </a> 
-				   </h5>
-                   <p class="card-text">[[${pizza.description}]]</p>
-                   <p class="card-text">[[${pizza.price}]] euro</p>
-                 </div>
-             </div>
+			           </a> 
+				       </h5>
+                       <p class="card-text">[[${pizza.description}]]</p>
+                       <p class="card-text">[[${pizza.price}]] euro</p>
+				   </div>
+				   <div>
+                     <a aria-current="page" class="mx-3"
+                         th:href="@{/pizze/edit/{id} (id=${pizza.id})}"
+                         style="--bs-btn-padding-y: .5rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 1rem;">
+                         Modifica
+                     </a>
+                     <form th:action="@{/pizze/delete/{id} (id=${pizza.id})}" method="POST" >
+						 <input type="submit" value="Cancella">
+					 </form>
+                   </div>
+                </div>
             </div>
         </div>
      </div>
- </main>
+  </main>
    
     <!-- Bootstrap Bundle with Popper -->
          <script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.bundle.min.js}"></script>
