--- a/src/main/resources/templates/pizza-form.html
+++ b/src/main/resources/templates/pizza-form.html
@@ -6,30 +6,30 @@
 	 <form th:object = "${pizza}" method="POST">
 		 <div class="mb-3">
 			 <div th:replace="frags/errorsField :: errorDiv('foto')" />
-            <label for="foto" class="form-label"></label>
-            <input type="url" class="form-control" id="foto" placeholder="Image Url" th:field="*{foto}">
+             <label for="foto" class="form-label"></label>
+             <input type="url" class="form-control" id="foto" placeholder="Image Url" th:field="*{foto}">
          </div>
      
          <div class="mb-3">
 			 <div th:replace="frags/errorsField :: errorDiv('name')" />
-            <label for="name" class="form-label"></label>
-            <input type="text" class="form-control" id="name" placeholder="Nome della pizza" th:field="*{name}">
+             <label for="name" class="form-label"></label>
+             <input type="text" class="form-control" id="name" placeholder="Nome della pizza" th:field="*{name}">
          </div>
      
          
          <div class="mb-3">
 			 <div th:replace="frags/errorsField :: errorDiv('description')" />
-            <label for="description" class="form-label"></label>
-            <input type="text" class="form-control" id="description" placeholder="Ingredienti"  th:field="*{description}">
+             <label for="description" class="form-label"></label>
+             <input type="text" class="form-control" id="description" placeholder="Ingredienti"  th:field="*{description}">
          </div>
      
          <div class="mb-3">
 			 <div th:replace="frags/errorsField :: errorDiv('price')" />
-            <label for="price" class="form-label"></label>
-            <input type="text" class="form-control" id="price" placeholder="Inserisci il prezzo" th:field="*{price}" + "euro">
+             <label for="price" class="form-label"></label>
+             <input type="text" class="form-control" id="price" placeholder="Inserisci il prezzo" th:field="*{price}">
          </div>
          <div >
-            <button class="btn btn-primary" type="submit" value="STORE">Crea</button>
+             <button class="btn btn-primary" type="submit" value="STORE">Crea</button>
          </div>
 	 </form>
 	 
