--- a/src/main/resources/templates/singlePizza.html
+++ b/src/main/resources/templates/singlePizza.html
@@ -1,15 +1,31 @@
 <head th:insert ="frags/head :: head"/>
 <body >
   <header th:insert="header :: header"/>
-   <main>
+   <main class="container">
+	 <h2 class="text-center">
+	  Offerte Speciali
+     </h2>
+	 <div class="text-center">
+		 <ul>
+            <li th:each="specialDiscount: ${discount}">
+               <span th:text="${specialDiscount.title + ' - ' + specialDiscount.startDate + ' - ' + specialDiscount.endDate}"></span>
+            </li>
+         </ul>
+         <a aria-current="page" class="m-auto btn btn-outline-success my-4"
+		    th:href = "@{/pizze/discount/{id} (id = *{id})}"
+            style="--bs-btn-padding-y: .5rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 1rem;"
+         >            
+            Aggiungi un'offerta
+	     </a>
+	 </div>
       <div class="singleCard">
 	      <h1 class="text-center"> La mia Pizza</h1>
-	      <div class="card" style="max-width: 540px; background-color: darkblue; color: aliceblue;">
+	      <div class="card" style="max-width: 540px; background-color: rgb(0, 41, 77);color: cadetblue">
               <div class="row g-0 p-0">
                  <div class="col-md-5">
                     <img th:src ="${singlePizza.foto}" class="img-fluid rounded-center" alt="...">
                  </div>
-                 <div class="col-md-7 mb-4 mt-1">
+                 <div class="col-md-7 mt-3">
                     <div class="card-body">
                        <h5 class="card-title" th:text ="${'Nome: '+ singlePizza.name}"></h5>
                        <p class="card-text" th:text ="${'INGREDIENTI: ' + singlePizza.description}"></p>
