Added ManyToMany relationShip between  pizza and Ingredients

--- a/src/main/resources/templates/pizza-form.html
+++ b/src/main/resources/templates/pizza-form.html
@@ -2,8 +2,9 @@
 <body >
   <header th:insert="header :: header"/>
   <main style="width: 500px;">
-	 <h1>Crea:</h1>
+	 
 	 <form th:object = "${pizza}" method="POST">
+		 
 		 <div class="mb-3">
 			 <div th:replace="frags/errorsField :: errorDiv('foto')" />
              <label for="foto" class="form-label"></label>
@@ -28,8 +29,21 @@
              <label for="price" class="form-label"></label>
              <input type="text" class="form-control" id="price" placeholder="Inserisci il prezzo" th:field="*{price}">
          </div>
+         
+         <h2>
+			 Ingredienti
+		 </h2>
+		 <div th:each="ingredient: ${ingredients}"
+		      th:object="${ingredient}"
+		 >
+		     <input type="checkbox" th:id="${'ingredient-' + ingredient.id}" th:value="*{id}" th:field="${pizza.ingredients}">
+		     <label th:for="${'ingredient-' + ingredient.id}">
+				[[*{name}]]
+			 </label>
+			 
+		 </div>
          <div >
-             <button class="btn btn-primary" type="submit" value="STORE">Crea</button>
+             <input type="submit" value= "CREATE" >
          </div>
 	 </form>
 	 
