--- a/src/main/resources/templates/singlePizza.html
+++ b/src/main/resources/templates/singlePizza.html
@@ -1,42 +1,60 @@
 <head th:insert ="frags/head :: head"/>
 <body >
   <header th:insert="header :: header"/>
-   <main class="container">
-	 <h2 class="text-center">
-	  Offerte Speciali
-     </h2>
-	 <div class="text-center">
-		 <ul>
-            <li  th:each="specialDiscount: ${discount}">
-               <p class="badge text-bg-info"  
-                  th:text="${specialDiscount.title + ' - ' + specialDiscount.startDate + ' - ' + specialDiscount.endDate}">
-               </p>
-            </li>
-         </ul>
-         <a aria-current="page" class="m-auto btn btn-outline-success my-4"
-		    th:href = "@{/pizze/discount/{id} (id = *{id})}"
-            style="--bs-btn-padding-y: .5rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 1rem;"
-         >            
-            Aggiungi un'offerta
-	     </a>
-	 </div>
-      <div class="singleCard">
+   <main class="container" th:object="${singlePizza}">
+	   <p th:if="${createdSpecialDiscount != null}"  class="alert alert-success " role="alert" style="width: 400px;">
+		  Offerta: '[[${createdSpecialDiscount.title}]]', creata con successo!!
+	   </p>
+	   <div>
+		   <h2 class="text-center">
+	         Offerte Speciali
+           </h2>
+		   <div class="text-center">
+		      <ul>
+                 <li th:each="specialDiscount : ${discount}">
+                    <p class="badge text-bg-info"> 
+                       <span th:text="${'Titolo: ' + specialDiscount.title}"></span><br>
+                       <span th:text="${'Dal: ' + specialDiscount.startDate}"></span><br>
+                       <span th:text="${'Al: ' + specialDiscount.endDate}"></span><br>
+                    </p>
+                 </li>
+              </ul>
+              <a aria-current="page" class="m-auto btn btn-outline-success my-4"
+		         th:href = "@{/pizze/discount/{id} (id = *{id})}"
+                 style="--bs-btn-padding-y: .5rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 1rem;"
+              >            
+                 Aggiungi un'offerta
+	          </a>
+	       </div>
+	   </div>
+	   <div class="singleCard">
 	      <h1 class="text-center"> La mia Pizza</h1>
-	      <div class="card" style="max-width: 540px; background-color: rgb(0, 41, 77);color: cadetblue">
+	      <div class="card" style="width:auto; background-color: rgb(0, 41, 77);color: cadetblue">
               <div class="row g-0 p-0">
                  <div class="col-md-5">
                     <img th:src ="${singlePizza.foto}" class="img-fluid rounded-center" alt="...">
                  </div>
                  <div class="col-md-7 mt-3">
                     <div class="card-body">
-                       <h5 class="card-title" th:text ="${'Nome: '+ singlePizza.name}"></h5>
-                       <p class="card-text" th:text ="${'Ingredienti: ' + singlePizza.description}"></p>
-                       <p class="card-text" th:text ="${ 'Prezzo: ' + singlePizza.price +' ' + 'euro'}"></p>
+                       <p class="card-title" th:text ="${'Nome: ' + singlePizza.name}"></p>
+                       <p class="card-text" th:text ="${ 'Descrizione: ' + singlePizza.description}"></p>
+                       <p class="card-text" th:text ="${'Prezzo: ' +  singlePizza.price +' ' + 'euro'}"></p>
                     </div>
-                  </div>
-                </div>
+	                <div class="mx-3">	
+                      <span>Ingredienti:</span>	
+						   
+			          <span th:each="ingredient : ${singlePizza.ingredients}"
+			          
+			               th:text ="${ingredient.name + ' , '}" 
+			          >    		         
+                      </span> 
+	                </div>
+                 </div>   
+               </div>
            </div>
        </div>
+       
+       
    </main>
 
  <!-- Bootstrap Bundle with Popper -->
